<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/background">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"/>

        <!-- Логотип приложения -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icon_logo_finance_saver"
            android:layout_marginBottom="24dp"/>

        <!-- Название приложения -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="8dp"/>

        <!-- Версия -->
        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_loading"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"/>

        <!-- Описание приложения -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"/>

        <!-- Разработчик -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_info"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"/>

        <!-- Контакты -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>