<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/background">

    <!-- Заголовок и иконка -->
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon_add_to_group"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_family_member"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Поле для имени пользователя -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_to_add_hint"
            android:textColor="@color/text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Поле для сообщения -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_to_user"
            android:textColor="@color/text_primary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка отправки -->
    <Button
        android:id="@+id/btnSendRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_request_button"
        android:textColor="@color/execute_button_text"
        android:backgroundTint="@color/light_yellow"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
</LinearLayout>